public/css/drawing.css
body {
  overflow: hidden;
}
body > header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 90px;
  height: 120px;
  z-index: 100;
}
@media screen and (max-width: 768px) {
  body > header {
    padding: 0 24px;
  }
}
body > header a {
  cursor: pointer;
  position: relative;
  z-index: 100;
}
body > header a img {
  width: 200px;
}
body > header .header-icons {
  display: flex;
  gap: 4px;
  position: relative;
  z-index: 100;
}
body > header .header-icons > li {
  cursor: pointer;
  width: 50px;
  height: 50px;
  display: grid;
  place-items: center;
  border-radius: 50%;
  padding: 0.7rem;
  position: relative;
}
body > header .header-icons > li#share div {
  display: none;
  position: absolute;
  width: 300px;
  right: 0;
  background: #f4f4f4;
  z-index: 200;
  border-radius: 8px;
  padding: 1.5rem;
  bottom: 0;
  transform: translateY(calc(100% + 10px));
}
body > header .header-icons > li#share div.show {
  display: flex;
  flex-direction: column;
}
body > header .header-icons > li#share div .field {
  background: #fafafa;
  margin-top: 20px;
  font-size: 1rem;
}
body > header .header-icons > li img {
  width: 100%;
  height: 100%;
}
body > header .header-icons > li:hover {
  background-color: #f4f4f4;
}
body > header .header-icons > li:last-child, body > header .header-icons > li:nth-last-child(2) {
  position: relative;
}
body > header .header-icons > li:last-child ul, body > header .header-icons > li:nth-last-child(2) ul {
  top: 60px;
  right: 0;
}
body > header .header-icons > li:last-child ul.show, body > header .header-icons > li:nth-last-child(2) ul.show {
  max-height: 120px;
}
body main .left-panel {
  align-items: flex-end;
  left: 0;
  transform: translate(-60%, -50%);
}
body main .left-panel.show .colors {
  filter: blur(0);
}
body main .left-panel .colors {
  display: grid;
  grid-template-columns: repeat(2, 60px);
  gap: 20px;
  margin-top: 1.5rem;
  filter: blur(20px);
  transition: filter 200ms;
}
body main .left-panel .colors li {
  filter: brightness(1);
  transition: filter 200ms;
}
body main .left-panel .colors li:not(li:last-child) {
  height: 60px;
  border-radius: 8px;
}
body main .left-panel .colors li:hover {
  filter: brightness(0.9);
}
body main .left-panel .colors li:last-child {
  grid-column: span 2;
  height: 60px;
}
body main .left-panel .colors li:last-child input {
  width: 100%;
  height: 100%;
  -webkit-appearance: none;
  border: none;
}
body main .left-panel .colors li:last-child input::-webkit-color-swatch-wrapper {
  padding: 0;
}
body main .left-panel .colors li:last-child input::-webkit-color-swatch {
  border: none;
  border-radius: 8px;
}
body main .left-panel .colors .color-1 {
  background-color: #f3b1af;
}
body main .left-panel .colors .color-2 {
  background-color: #f6d09a;
}
body main .left-panel .colors .color-3 {
  background-color: #fafd90;
}
body main .left-panel .colors .color-4 {
  background-color: #b0d9a0;
}
body main .left-panel .colors .color-5 {
  background-color: #9fd7de;
}
body main .left-panel .colors .color-6 {
  background-color: #a6c3fa;
}
body main .left-panel .colors .color-7 {
  background-color: #e4acec;
}
body main .left-panel .colors .color-8 {
  background-color: #bbb2f9;
}
body main .left-panel .colors .color-9 {
  background-color: #c1c1c1;
}
body main .left-panel .colors .color-10 {
  background-color: #111111;
}
body main canvas {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}
body main .right-panel {
  align-items: flex-start;
  right: 0;
  transform: translate(60%, -50%);
}
body main .right-panel > span {
  position: absolute;
  top: 0;
  margin-top: -40px;
  right: 40px;
}
body main .right-panel.show .tools {
  filter: blur(0);
}
body main .right-panel .tools {
  display: grid;
  grid-template-columns: repeat(2, 60px);
  gap: 20px;
  margin-top: 1.5rem;
  filter: blur(20px);
  transition: filter 200ms;
}
body main .right-panel .tools button {
  pointer-events: none;
}
body main .right-panel .tools > li {
  height: 60px;
  display: grid;
  place-items: center;
  border-radius: 8px;
  background: #fafafa;
  padding: 0.7rem;
  border: 2px solid #c1c1c1;
  transition: border-color 200ms;
  position: relative;
}
body main .right-panel .tools > li:nth-last-child(2), body main .right-panel .tools > li:last-child {
  background: #bbb2f9;
  border-color: transparent;
}
body main .right-panel .tools > li:hover, body main .right-panel .tools > li.active {
  border-color: #111111;
}
body main .right-panel .tools > li ul {
  left: 0;
  top: 0;
  transform: translateX(calc(-100% - 24px));
}
body main .right-panel .tools > li ul li.active button {
  color: #bbb2f9;
}
body main .right-panel .tools > li ul li:first-child {
  padding: 1rem;
  border-bottom: rgba(17, 17, 17, 0.1) 2px solid;
}
body main .right-panel .tools > li ul li:first-child > input {
  cursor: text;
}
body main .right-panel .tools > li ul li:first-child > input[disabled] {
  cursor: not-allowed;
}
body main .right-panel .tools > li ul li:nth-child(2) {
  font-family: "Times New Roman", sans-serif;
}
body main .right-panel .tools > li ul li:nth-child(3) {
  font-family: "Impact", sans-serif;
}
body main .right-panel .tools > li ul li:last-child {
  font-family: "Comic Sans MS", sans-serif;
  display: flex;
  align-items: center;
  position: relative;
}
body main .right-panel .tools > li ul li:last-child span {
  opacity: 0;
  pointer-events: none;
  font-size: 0.7rem;
  white-space: nowrap;
  position: absolute;
  right: 0;
  bottom: 0;
  transition: opacity 200ms;
}
body main .right-panel .tools > li ul li:last-child:hover span {
  opacity: 1;
}
body main .right-panel .tools > li ul li button {
  pointer-events: none;
}
body main .right-panel .tools > li ul.show {
  max-height: -webkit-max-content;
  max-height: -moz-max-content;
  max-height: max-content;
}

.panel {
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 50%;
  background: #f4f4f4;
  padding: 1.5rem;
  transition: transform 200ms;
  z-index: 1;
}
.panel li {
  pointer-events: none;
}
.panel li#color-changing-type img.hidden {
  display: none;
}
.panel.show {
  transform: translate(0, -50%);
}
.panel.show header img {
  transform: rotate(180deg);
}
.panel.show li {
  pointer-events: all;
  cursor: pointer;
}
.panel.show li img {
  pointer-events: none;
}
.panel header img {
  cursor: pointer;
  transform: rotate(0);
  transition: transform 200ms;
}

